--- a/end.html
+++ b/end.html
@@ -4,12 +4,23 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
    <title>End</title>
 </head>
 <body>
    <div class="container">
-      
+      <div id="end" class="flex-center flex-column">
+         <h1 id="finalScore">0</h1>
+         <form class="end-form-container">         
+            <h2 id="end-text">Введите свое имя для сохранения счета!</h2>
+            <input type="text" id="username" placeholder="Введите свое имя">
+            <button class="btn" id="saveScoreBtn" type="submit" onClick="saveHighScore(event)" disabled>Сохранить</button>
+         </form>
+         <a href="game.html" class="btn">Играть снова</a>
+         <a href="index.html" class="btn">Домой<i class='fas fa-home'></i></a>
+      </div>
    </div>
+   <script src="end.js"></script>
 </body>
 </html>
